# selosele2-cli

./: .gitignore  README.md  pyproject.toml
selosele2_cli/: __init__.py  cli.py  main.py  utils.py
selosele2_cli/cli/: auth.py  blog_config.py  config.py  lang_config.py  list_post.py  menu.py  post_list.py  post_view.py  signin.py  utils.py
