[tool.poetry]
name = "selosele2-cli"
version = "0.1.0"
description = ""
authors = ["selosele <osh3384@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.7"
simple-term-menu = "^1.6.4"
beautifulsoup4 = "^4.12.2"

[tool.poetry.scripts]
start = "selosele2_cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
